# SpectraPBR

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  claude.md  claude_phase2.md  claude_phase3.md  claude_phase4.md  kernel_report.ncu-rep
.claude/: settings.local.json
cmake/: FindOptiX.cmake
optix_programs/: anyhit.cu  brdf.h  closesthit.cu  gpu_types.h  miss.cu  raygen.cu  shared_device.h
shaders/: display.frag  display.vert
src/: camera.cpp  camera.h  cuda_interop.cpp  cuda_interop.h  geometry_manager.cpp  gl_context.cpp  gl_context.h  main.cpp  material_manager.cpp  material_manager.h  model_loader.cpp  optix_engine.cpp  optix_engine.h  scene_manager.cpp  scene_manager.h  shader_utils.cpp  shader_utils.h  shared_types.h  texture_manager.cpp  texture_manager.h
src/core/: gpu_profiler.h  main.cpp  shared_types.h
src/cuda/: cuda_interop.h
src/graphics/: gl_context.cpp  gl_context.h
src/loaders/: environment_map.cpp  environment_map.h  material_manager.cpp  model_loader.h
src/optix/: optix_engine.cpp  optix_engine.h
src/rendering/: geometry_manager.h  scene_manager.cpp
src/scene/: scene_hierarchy.cpp  scene_hierarchy.h  scene_serializer.cpp  scene_serializer.h  selection_manager.cpp  selection_manager.h
src/text/: font_atlas.cpp  font_atlas.h  text_layout.cpp  text_layout.h
src/ui/: button.cpp  button.h  color_picker.cpp  color_picker.h  input_handler.cpp  input_handler.h  label.cpp  label.h  panel.cpp  panel.h  property_panel.cpp  property_panel.h  scroll_view.cpp  scroll_view.h  slider.cpp  slider.h  texture_preview_cache.cu  texture_preview_cache.h  theme.h  tree_node.cpp  tree_node.h  ui_manager.cpp  ui_manager.h  ui_renderer.cu  ui_renderer.h  ui_types.h  widget.cpp  widget.h
